--- a/templates/administration/detail.html
+++ b/templates/administration/detail.html
@@ -14,7 +14,7 @@
                 <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col">
-                            <label>Betriebsname: </label>
+                            <label>Filialname: </label>
                         </div>
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.name }}'>
