--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-auto">
               <a href="{% url 'patientDetail' instance.id %}" class="btn btn-outline-primary">Patient bearbeiten</a>
-              <a href="{% url 'patientDelete' instance.id %}" class="btn btn-outline-primary">Patient löschen</a>
+              <a href="{% url 'patientDelete' instance.id %}" class="btn btn-outline-primary">Patient entfernen</a>
             </div>
 
           </div>
