--- a/templates/worklists/worklist_list.html
+++ b/templates/worklists/worklist_list.html
@@ -29,7 +29,7 @@
         <div class="col">
           <div class="row">
             <div class="col" id="title_card">
-              <h5 class="card-title">{{location.name}} {{ location.id}}</h5>
+              <h5 class="card-title">{{location.name}}</h5>
             </div>
           </div>
         </div>
