--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -7,7 +7,7 @@
 <form action='.' method='POST'>
     {% csrf_token %}
     <div class="card border-info mb-3 w-50 mx-auto"> 
-        <div class="card-header"> Patient ID: {{ object.id }} </div>
+        <div class="card-header"> Patienten-ID: {{ object.id }} </div>
         <div class="card-body">
             <ul class="list-group list-group-flush"> 
                 <li class="list-group-item py-1">
