--- a/templates/administration/location_delete.html
+++ b/templates/administration/location_delete.html
@@ -26,10 +26,10 @@
       </div>
 
       <ul class="list-group list-group-flush">
-        <li class="list-group-item py-1"> Betriebsname: {{ object.name }}</li>
+        <li class="list-group-item py-1 mt-1"> Filialname: {{ object.name }}</li>
         <li class="list-group-item py-1">Addresse: {{ object.street }}, {{ object.number }}</li>
         <li class="list-group-item py-1">{{ object.city }}, {{ object.plz }}</li>
-        <li class="list-group-item py-1">Telefon Nr.: {{ object.telefon_number }}</li>
+        <li class="list-group-item py-1 mb-1">Telefon Nr.: {{ object.telefon_number }}</li>
       </ul>
 
       <input type='submit' class="btn btn-outline-primary" value='Ja' />
