--- a/templates/worklists/worklist_list.html
+++ b/templates/worklists/worklist_list.html
@@ -130,7 +130,7 @@
       if ($.trim($(this).html()).length == 0) {
         var icon = '<img id="status-icon" src="/static/images/cancel.png" width="25" height="25">';
         var text = '<p>Für diesen Standort wurden keine Modalitäten registriert.</p>';
-        var position = '<div class="row"><div class="col mx-auto">' +  text + '</div><div class="col-md-auto">' + icon + '</div></div>';
+        var position = '<div class="row"><div class="col-2"></div><div class="col ml-auto">' +  text + '</div> <div class="col-md-auto">' + icon + '</div></div>';
 
         $(this).html(position);
 
