--- a/templates/patient/patient_import.html
+++ b/templates/patient/patient_import.html
@@ -5,13 +5,12 @@
   <h2 class="text-center">Patienten in curaPACS importieren</h2>
 </div>
   {% csrf_token %}
+  <div class="mx-auto" style="width:550px; margin-top:35px;" > 
   {% if object_list|length == 0 %}
   <div class="card border-info" style="width: 30rem;"> 
-    <div class="card-body">
-      Alle Patienten bereits importiert.
-    </div>
+    <div class="card-body">Alle Patienten bereits importiert.</div>
   </div>
-  
+   
   {% endif %}
 
   {% if object_list|length > 1 %}
@@ -19,6 +18,7 @@
   <button id="btn-import-all-patients" name="show-import" type="button" class="btn btn-outline-primary">Alle Patienten importieren</button>
   </div>
   {% endif %}
+</div>
 
   {% for instance in object_list reversed %}
   <div class="card border-info mb-3 w-50 mx-auto">
@@ -59,8 +59,8 @@
       </div>
   
       <ul class="list-group list-group-flush"> 
-        <li class="list-group-item py-1">Geburtsdatum: {{ instance.birthdate }}</li>
-        <li class="list-group-item py-1">Adresse: {{ instance.address }} {{ instance.number }},
+        <li class="list-group-item py-1 mt-1">Geburtsdatum: {{ instance.birthdate }}</li>
+        <li class="list-group-item py-1 mb-1">Adresse: {{ instance.address }} {{ instance.number }},
           {{ instance.city }} {{ instance.code }}</li>
        
       </ul>
