--- a/templates/patient/patient_merge.html
+++ b/templates/patient/patient_merge.html
@@ -49,7 +49,7 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col" style="padding-bottom: 5px;">
+                                            <div class="col" style="padding-bottom: 5px; padding-top: 10px;">
                                                 <button class="btn btn-outline-primary my-2 my-sm-0"
                                                     id="search-btn">Suchen</button>
                                             </div>
