--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,10 @@
       <div class="card text-center w-100 ">
         <div class="card-header  ">
           <ul class="nav ">
-            <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">
+            <div class="col" style="width: 80px;">  
+              <img src="/static/images/favicon.ico"alt="" loading="lazy">
+            </div>
+           
             <li class="nav-item"><a class="nav-link home" href="{% url 'home' %}">Home</a></li>
 
             <li class="nav-item dropdown">
