--- a/templates/patient/patient_delete.html
+++ b/templates/patient/patient_delete.html
@@ -10,11 +10,11 @@
     <div class="card-body">
       <div class="container">
         <div class="row">
-          <div class="card w-2 border-0">
-            <div class="col"> {% if object.title == 'male' %}
-              <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
+          <div class="card w-2 border-0">  
+            <div class="col" style="width: 80px;"> {% if object.title == 'male' %}
+              <img src="/static/images/batman.png" class="card-img-top">
               {% else %}
-              <img src="/static/images/marilyn_monroe.png" class="card-img-top" width="55" height="45">
+              <img src="/static/images/marilyn_monroe.png" class="card-img-top">
               {% endif %}
             </div>
           </div>
