--- a/templates/patient/patient_merge.html
+++ b/templates/patient/patient_merge.html
@@ -16,8 +16,12 @@
                 <div class="col col-lg-5">
                     <div class="card border-info">
                         <div class="card-body">
-                            <h5 class="card-title"><img src="/static/images/favicon.ico" width="30" height="30" alt=""
+                            <h5 class="card-title">
+                                <div class="col" style="width: 80px;">
+                                    <img src="/static/images/favicon.ico" alt=""
                                     loading="lazy">curaMED</h5>
+                                </div>
+                                
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item py-1">Name: {{ object.first_name }} {{ object.second_name }}</li>
                                 <li class="list-group-item py-1">Geschlecht: {% if object.title == "male" %}männlich{% else %}weiblich{% endif %}</li>
@@ -31,8 +35,12 @@
                 <div class="col">
                     <div class="card border-info">
                         <div class="card-body">
-                            <h5 class="card-title"><img src="/static/images/curaPacs.png" width="30" height="35" alt=""
+                            <h5 class="card-title">
+                                <div class="col" style="width: 80px;">
+                                    <img src="/static/images/curaPacs.png" alt=""
                                     loading="lazy">curaPACS</h5>
+                                </div>
+                                
                             <div class="row">
                                 <div class="col">
                                     <nav class="navbar navbar-light ">
@@ -185,10 +193,10 @@
                 var parsed_response = jQuery.parseJSON(responseData)
                 console.log(parsed_response);
                 if (parsed_response["failed"].length != 0) {
-                    var button_icon = '<img id="status-icon" src="/static/images/cancel.png" width="25" height="25">';
+                    var button_icon = '<div class="col" style="width: 80px;"><img id="status-icon" src="/static/images/cancel.png"></div>';
                     var button_text = "Vorgang fehlgeschlagen";
                 } else {
-                    var button_icon = '<img id="status-icon" src="/static/images/check.png" width="25" height="25">';
+                    var button_icon = '<div class="col" style="width: 80px;"><img id="status-icon" src="/static/images/check.png"></div>';
                     var button_text = "Vorgang erfolgreich";
                 }
                 $('#merge-btn').addClass('enabled');
