--- a/templates/worklists/worklist_list.html
+++ b/templates/worklists/worklist_list.html
@@ -22,8 +22,8 @@
     <div class="container">
       <div class="row">
         <div class="card w-2 border-0">
-          <div class="col">
-            <img id="status-icon" src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">
+          <div class="col" style="width: 80px;">
+            <img id="status-icon" src="/static/images/smart-home.png" class="card-img-top">
           </div>
         </div>
         <div class="col">
