--- a/templates/administration/create.html
+++ b/templates/administration/create.html
@@ -12,8 +12,8 @@
       <div class="container">
         <div class="row">
           <div class="card w-2 border-0">
-            <div class="col">
-              <img src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">
+            <div class="col" style="width: 80px">
+              <img src="/static/images/smart-home.png" class="card-img-top">
             </div>
           </div>
           <div class="col-10">
