--- a/templates/modality/detail.html
+++ b/templates/modality/detail.html
@@ -10,8 +10,8 @@
             <div class="container">
                 <div class="row">
                     <div class="card w-2 border-0">
-                        <div class="col">
-                            <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
+                        <div class="col"  style="width: 80px;">
+                            <img src="/static/images/mri.png" class="card-img-top">
                         </div>
                     </div>
                 </div>
