--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,8 @@
     <div class="container-md">
       <div class="card text-center w-100 ">
         <div class="card-header  ">
-          <ul class="nav ">
-            <div class="col" style="width: 80px;">  
-              <img src="/static/images/favicon.ico"alt="" loading="lazy">
-            </div>
+          <ul class="nav "> 
+              <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">
            
             <li class="nav-item"><a class="nav-link home" href="{% url 'home' %}">Home</a></li>
 
