--- a/templates/patient/patient_merge.html
+++ b/templates/patient/patient_merge.html
@@ -17,10 +17,10 @@
                     <div class="card border-info">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <div class="col" style="width: 80px;">
-                                    <img src="/static/images/favicon.ico" alt=""
+                                
+                                    <img src="/static/images/favicon.ico" width="30" height="30" alt=""
                                     loading="lazy">curaMED</h5>
-                                </div>
+                         
                                 
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item py-1">Name: {{ object.first_name }} {{ object.second_name }}</li>
@@ -36,10 +36,10 @@
                     <div class="card border-info">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <div class="col" style="width: 80px;">
-                                    <img src="/static/images/curaPacs.png" alt=""
+                              
+                                    <img src="/static/images/curaPacs.png" width="30" height="30" alt=""
                                     loading="lazy">curaPACS</h5>
-                                </div>
+                               
                                 
                             <div class="row">
                                 <div class="col">
