--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -7,7 +7,7 @@
  
 <form id='worklist-form' method='POST'> {% csrf_token %}
     <input type="hidden" name="patient_id" id="id_patient_id" value='{{ patient.id }}' readonly>
-    <div class="card border-info mb-3 w-50 mx-auto"> 
+    <div class="card border-info mb-3 w-75 mx-auto"> 
         <div class="card-body">
             <div class="container">
                 <div class="row">
@@ -26,7 +26,7 @@
                         </div>
                         
                         <div class="col">
-                            <input type="text" class="font-italic" name="scheduled_procedure_step_start_date" 
+                            <input type="text" class="form-control" name="scheduled_procedure_step_start_date" 
                             id="id_scheduled_procedure_step_start_date" 
                             value='{{ date  }}' readonly>
                                 
@@ -39,7 +39,7 @@
                             <label>Auftragszeit: </label>
                         </div>
                          <div class="col" >
-                            <input type="text" class="font-italic" name="scheduled_procedure_step_start_time" 
+                            <input type="text" class="form-control" name="scheduled_procedure_step_start_time" 
                             id="id_scheduled_procedure_step_start_time" 
                             value='{{ time|time}}' readonly>
                             
@@ -73,7 +73,7 @@
                         </div>
                         
                         <div class="col">
-                            <input type="text" class="font-italic" name="patient_s_name" id="id_patient_s_name" value='{{ patient.first_name }} {{ patient.second_name }}' readonly>
+                            <input type="text" class="form-control" name="patient_s_name" id="id_patient_s_name" value='{{ patient.first_name }} {{ patient.second_name }}' readonly>
                         </div>
                     </div>
                 </li>
@@ -84,7 +84,7 @@
                             <label>Geburtsdatum: </label>
                         </div>
                         <div class="col">
-                            <input type="text" class="font-italic" name="patient_s_birth_date" id="id_patient_s_birth_date" value='{{ patient.birthdate }}' readonly>
+                            <input type="text" class="form-control" name="patient_s_birth_date" id="id_patient_s_birth_date" value='{{ patient.birthdate }}' readonly>
                              
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <label>Geschlecht: </label>
                         </div>
                         <div class="col"> 
-                            <input type="text" class="font-italic" name="patient_s_sex" id="id_patient_s_sex" value='{{ patient.get_title_display}}' readonly>
+                            <input type="text" class="form-control" name="patient_s_sex" id="id_patient_s_sex" value='{{ patient.get_title_display}}' readonly>
                                            </div>
                     </div>
                 </li>
@@ -103,7 +103,6 @@
                 <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col">
-
                             <label>Auftragsbeschreibung: </label>
                         </div>
                         <div class="col">
