--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -1,24 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="margin-top:15px;"> 
-<h2 class="text-center">Patient erstellen</h2>
+<div style="margin-top:15px;">
+    <h2 class="text-center">Patient erstellen</h2>
 </div>
 <form action='.' method='POST'> {% csrf_token %}
-     
-    <div class="card border-info mb-3 w-50 mx-auto"> 
+
+    <div class="card border-info mb-3 w-50 mx-auto">
         <div class="card-body">
             <div class="container">
                 <div class="row">
                     <div class="card w-2 border-0">
-                        <div class="col" style="width: 80px;"> 
+                        <div class="col" style="width: 80px;">
                             <img src="/static/images/batman.png" class="card-img-top">
-                                               </div>
+                        </div>
                     </div>
 
                 </div>
 
-            </div> 
+            </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item py-2">
                     <div class="row">
@@ -55,10 +55,11 @@
                         <div class="col">
                             <label>Geburtstag: </label>
                         </div>
-                        <div class="col">
+                        <div class="col" title="Achtung! Geburtsdatum kann spätter nicht geändert werden.">
                             {{form.birthdate}}
                         </div>
                     </div>
+                    
                 </li>
                 <li class="list-group-item py-2">
                     <div class="row">
@@ -89,7 +90,7 @@
                             {{form.city}}
                         </div>
                     </div>
-                </li> 
+                </li>
                 <li class="list-group-item py-2">
                     <div class="row">
                         <div class="col">
@@ -111,10 +112,10 @@
                     </div>
                 </li>
             </ul>
-            <input type='submit' value='Speichern' class="btn btn-outline-primary" />
-    <a href="{% url 'patients' %}" class="btn btn-outline-primary" >Abbrechen</a>
+            <input type='submit' class="btn btn-outline-primary" name='action' value='Speichern' />
+            <a href="{% url 'patients' %}" class="btn btn-outline-primary">Abbrechen</a>
         </div>
     </div>
-    
+
 </form>
 {% endblock %}
